# compressor

./: .gitignore  CMakeLists.txt  Readme.md
docs/doxygen/html/: annotated.html  class_root.html  classcompare_1_1_compare-members.html  classcompare_1_1_compare.html  classes.html  classleaf_node_1_1_leaf_node-members.html  classleaf_node_1_1_leaf_node.html  classnormal_node_1_1_node-members.html  classnormal_node_1_1_node.html  classroot_node_1_1_root_node-members.html  classroot_node_1_1_root_node.html  compare_8cpp.html  compare_8h.html  compare_8h_source.html  dir_14b940de33f6d599fdff988f6e34ea61.html  dir_188d81d674ea6fdc58df7205d25cb2a6.html  dir_1d9575097fd221e2f905082b3715251f.html  dir_d522931ffa1371640980b621734a4381.html  dir_d59469cd927ae9206255ddc847533d82.html  dir_e373cc87f482243755fd8e225fb06a1e.html  dir_f45ade0c1bc980fd51c8e56132099401.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  index.html  leaf_node_8cpp.html  leaf_node_8h.html  leaf_node_8h_source.html  main_8cpp.html  namespacecompare.html  namespaceleaf_node.html  namespacenormal_node.html  namespaceroot_node.html  namespaces.html  node_8cpp.html  node_8h.html  node_8h_source.html  (+3 more)
docs/doxygen/latex/: annotated.tex  class_root.tex  classcompare_1_1_compare.tex  classleaf_node_1_1_leaf_node.eps  classleaf_node_1_1_leaf_node.tex  classnormal_node_1_1_node.eps  classnormal_node_1_1_node.tex  compare_8cpp.tex  files.tex  (+21 more)
src/: compare.cpp  leafNode.cpp  main.cpp  node.cpp  rootNode.cpp
src/include/: compare.h  leafNode.h  node.h  rootNode.h
(+27 files in other folders)
